[package]
name = "my-tools"
version = "0.1.0"
authors = ["skliew <skliew@gmail.com>"]
edition = "2018"

[dependencies]
serde_json = "1.0"
uuid = { version = "0.8", features = ["serde", "v4"] }

[[bin]]
name = "pretty-print-json"
path = "src/pretty_print_json.rs"

[[bin]]
name = "uuidgen"
path = "src/uuidgen.rs"

[[bin]]
name = "compact-json"
path = "src/compact_json.rs"
